--- a/index.html
+++ b/index.html
@@ -430,15 +430,21 @@
             </p>
             <div class="portfolio-container">
                 <div class="project-1">
-                    <img src="./Assets/images/project-covers/second-project.png" alt="">
+                    <img src="./Assets/images/project-covers/5th project-1 (1).png" alt="">
                     <i class="fa fa-compress first"></i>
-                    <a href="" data-target="project-details-1" class="view-details"><i class="fa fa-link" title="view project details"></i></a>
+                    <a href="" data-target="project-details-5" class="view-details"><i class="fa fa-link" title="view project details"></i></a>
                     <i class="fa fa-compress second"></i>
                 </div>
                 <div class="project-1">
                     <img src="./Assets/images/project-covers/4th project-1.png" alt="">
                     <i class="fa fa-compress first"></i>
                     <a href="" data-target="project-details-4" class="view-details"><i class="fa fa-link" title="view project details"></i></a>
+                    <i class="fa fa-compress second"></i>
+                </div>
+                <div class="project-1">
+                    <img src="./Assets/images/project-covers/second-project.png" alt="">
+                    <i class="fa fa-compress first"></i>
+                    <a href="" data-target="project-details-1" class="view-details"><i class="fa fa-link" title="view project details"></i></a>
                     <i class="fa fa-compress second"></i>
                 </div>
                 <div class="project-1">
@@ -621,6 +627,47 @@
         </section>
         </div>
         </div>
+         <!-- modal for project five -->
+         <div id="project-details-5" class="modal">
+            <div class="modal-content">
+              <!-- Content for the modal-->
+              <span class="close">&times;</span>
+              <section class="project-details">
+                <div class="project-container">
+                    <h2>Portfolio Details</h2>
+                    <div class="content">
+                        <div class="carousel">
+                            <figure class="slide">
+                                <img src="./Assets/images/project-covers/5th project-1 (1).png" alt=""/>
+                                <img src="./Assets/images/project-covers/5th project-1 (2).png" alt=""/>
+                                <img src="./Assets/images/project-covers/5th project-1 (3).png" alt="" />
+                                <img src="./Assets/images/project-covers/5th project-1 (4).png" alt="" />
+                                <img src="./Assets/images/project-covers/5th project-1 (1).png" alt=""/>
+                            </figure>
+                        </div>
+                     <div class="project-info">
+                         <h4> Project Information</h4>
+                         <p><span>Category: </span> Web Design</p>
+                         <p><span>Client: </span> Personal Project</p>
+                         <p><span>Project date: </span>18th April, 2024</p>
+                         <p><span>Project URL: </span><a href="https://payzor.netlify.app/" target="_blank">Payzor</a></p>
+                         <p><span>Github Link: </span><a href="https://github.com/Bookieblue/payzor" target="_blank">Source Code</a></p>
+                         <br>
+                         <br>
+                         <p>Payzor is an online platform facilitating transactions
+                             and payments across various countries.
+                             It features engaging animations designed to captivate users
+                              and enhance their experience while using the service.
+                            <br>
+                            <br>
+                            <b>Tech Stack</b> - React, JavaScript, Tailwind CSS, Material UI (MUI) and framer motion.
+                        </p>
+                     </div>
+                    </div>
+                </div>
+            </section>
+            </div>
+          </div>
     </section>
     <!--contact section-->
     <section class="contact" id="section">
