--- a/index.html
+++ b/index.html
@@ -446,6 +446,13 @@
                         <i class="fa fa-compress second"></i>
                     </div>
                     <div class="project-1">
+                        <img src="./Assets/images/project-covers/start-hive.png" alt="">
+                        <i class="fa fa-compress first"></i>
+                        <a href="" data-target="project-details-6" class="view-details"><i class="fa fa-link"
+                                title="view project details"></i></a>
+                        <i class="fa fa-compress second"></i>
+                    </div>
+                    <div class="project-1">
                         <img src="./Assets/images/project-covers/snap (3).png" alt="">
                         <i class="fa fa-compress first"></i>
                         <a href="" data-target="project-details-4" class="view-details"><i class="fa fa-link"
@@ -473,7 +480,6 @@
                                 title="view project details"></i></a>
                         <i class="fa fa-compress second"></i>
                     </div>
-
                 </div>
             </div>
             <!-- modal for project one -->
@@ -723,6 +729,53 @@
                                 platform more enjoyable.
                                 Through visually appealing elements, I aimed to make a lasting impression and encourage
                                 users to discover more about what Payzor has to offer.
+                            </p>
+                        </div>
+                    </section>
+                </div>
+            </div>
+             <!-- modal for project five -->
+             <div id="project-details-6" class="modal">
+                <div class="modal-content">
+                    <!-- Content for the modal-->
+                    <span class="close">&times;</span>
+                    <section class="project-details">
+                        <div class="project-container">
+                            <h2>Portfolio Details</h2>
+                            <div class="content">
+                                <div class="carousel">
+                                    <figure class="slide">
+                                        <img src="./Assets/images/project-covers/startup-hive (1).png" alt="" />
+                                        <img src="./Assets/images/project-covers/startup-hive (2).png" alt="" />
+                                        <img src="./Assets/images/project-covers/startup-hive (3).png" alt="" />
+                                        <img src="./Assets/images/project-covers/startup-hive (4).png" alt="" />
+                                        <img src="./Assets/images/project-covers/startup-hive (5).png" alt="" />
+                                    </figure>
+                                </div>
+                                <div class="project-info">
+                                    <h4> Project Information</h4>
+                                    <p><span>Category: </span> Web Design</p>
+                                    <p><span>Client: </span>Ifeoluwa Ajetomobi (Contract Project)</p>
+                                    <p><span>Project date: </span>4th January, 2024</p>
+                                    <p><span>Project URL: </span><a href="https://startup-hive-app.netlify.app/"
+                                            target="_blank">Startup Hive</a></p>
+                                    <p><span>Github Link: </span><a href="https://github.com/Bookieblue/Startup-hive-webapp"
+                                            target="_blank">Source Code</a></p>
+                                    <br>
+                                </div>
+                            </div>
+                            <br>
+                            <p class="details"> <b>About</b> -Startup Hive offers a dynamic platform where users can actively support, suggest, or claim ownership of startups across African countries. 
+                                It's more than just an online database; it's a vibrant community where individuals can engage with and empower emerging businesses. By participating in Startup Hive, users not only contribute to the growth of startups but also amplify their online presence.
+                                Plus, with advertising support for startups, it's a win-win for both budding entrepreneurs and eager supporters looking to make a difference in the startup ecosystem.
+                                <br>
+                                <br>
+                                <b>Tech Stack</b> - Next, TypeScript, Tailwind CSS, Upload Things and Shadcn UI 
+                                <br>
+                                <br>
+                                <b>My Role</b> -  I collaborated with full-stack developers, specializing in frontend development, database management, and testing. My
+                                 role involves contributing to software applications by designing user interfaces, implementing server-side logic,
+                                  and ensuring code quality through testing and debugging.
                             </p>
                         </div>
                     </section>
