--- a/index.html
+++ b/index.html
@@ -289,8 +289,7 @@
                             <div class="contents">
                                 <div class="box">
                                     <h3>OLUWABUKOLA FASAN</h4>
-                                        <p>I'm a skilled Front-End Developer with 1 year
-                                            of experience creating user-friendly, responsive web apps.
+                                        <p>I'm a skilled Front-End Developer, creating user-friendly, responsive web apps.
                                             I'm driven by a passion for clean, efficient interfaces,
                                             keeping up with the latest tech, and working collaboratively
                                             to deliver engaging user experiences</p>
@@ -334,6 +333,19 @@
                             <h2>Professional Experience</h2>
                         </header>
                         <div class="contents">
+                            <div class="box">
+                                <h3>FRONT-END DEVELOPER </h3>
+                                <h4>Jan 2024 - Mar 2024</h4>
+                                <p class="location">Startup Hive, Lagos</p>
+                                <ul>
+                                    <li>Translating UI/UX designs into actual codes using Next, Tailwind CSS, TypeScript
+                                        and
+                                        Shadcn.</li>
+                                    <li>collaborated with full-stack developers, specializing in frontend development, database management, and testing.</li>
+                                    <li>Contributed to software applications by designing user interfaces, implementing server-side logic, and ensuring code quality through testing and debugging.</li>
+                                   
+                                </ul>
+                            </div>
                             <div class="box">
                                 <h3>FRONT-END DEVELOPER (INTERN)</h3>
                                 <h4>Jul 2023 - Nov 2023</h4>
