--- a/index.html
+++ b/index.html
@@ -75,12 +75,18 @@
                     <div class="text-container">
                         <h3>Front End Developer</h3>
                         <p>
-                            Hello, I'm Oluwabukola. A math enthusiast turned
+                            Hello, I'm Oluwabukola Chloe Fasan. A math enthusiast turned
                             coding enthusiast, finds joy in front-end development,
                             treating HTML, CSS, and JavaScript as a superhero trio.
-                            Each line of code is a move on the design puzzle, turning
-                            screens into interactive masterpieces. With React, Tailwind CSS,
-                            and Next.js, I'm not just keeping up; I'm defining the future.
+                            <p> 
+                            I spend most of my time designing UI, coding up things for the web, and learning algorithms.
+                                My goal is to deliver, through code, unique and innovative solutions to complex problems.
+                            </p>
+                            
+                            <p>
+                            If my portfolio interests you, or you need an enthusiastic developer on your team, 
+                            I am available for hire.
+                            </p>
                             Let's continue crafting solutions and creations, one line at a time 🚀💻
                         </p>
                         <button class="btn" type="submit" name="btn-send" required><a href="Oluwabukola Fasan CV.pdf"
@@ -472,7 +478,7 @@
                         <i class="fa fa-compress second"></i>
                     </div>
                     <div class="project-1">
-                        <img src="./Assets/images/project-covers/ear-mee.png" alt="">
+                        <img src="./Assets/images/project-covers/hi.png" alt="">
                         <i class="fa fa-compress first"></i>
                         <a href="" data-target="project-details-1" class="view-details"><i class="fa fa-link"
                                 title="view project details"></i></a>
