--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
                         </header>
                         <div class="contents">
                             <div class="box">
-                                <h3>FRONT-END DEVELOPER </h3>
-                                <h4>Jan 2024 - Mar 2024</h4>
+                                <h3>FRONTEND DEVELOPER </h3>
+                                <h4>Jan 2024 - Present</h4>
                                 <p class="location">Startup Hive, Lagos</p>
                                 <ul>
                                     <li>Translating UI/UX designs into actual codes using Next, Tailwind CSS, TypeScript
@@ -353,8 +353,8 @@
                                 </ul>
                             </div>
                             <div class="box">
-                                <h3>FRONT-END DEVELOPER (INTERN)</h3>
-                                <h4>Jul 2023 - Nov 2023</h4>
+                                <h3>FRONTEND DEVELOPER</h3>
+                                <h4>Jun 2023 - Nov 2023</h4>
                                 <p class="location">Sabi Programmers, Akure</p>
                                 <ul>
                                     <li>Translating UI/UX designs into actual codes using HTML, Tailwind CSS, JavaScript
